[gd_scene load_steps=2 format=3 uid="uid://battle_scene_001"]

[ext_resource type="Script" path="res://scripts/battle/battle_scene.gd" id="1_battle"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="UI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/VBox"]
layout_mode = 2
text = "Battle — Turn order by Speed (4 vs 1-4)"
horizontal_alignment = 1

[node name="HSep" type="HSeparator" parent="UI/VBox"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="UI/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="UI/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TurnOrderLabel" type="Label" parent="UI/VBox/Content/Left"]
layout_mode = 2
text = "Turn order (speed):"

[node name="TurnOrderList" type="VBoxContainer" parent="UI/VBox/Content/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="Center" type="VBoxContainer" parent="UI/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartyLabel" type="Label" parent="UI/VBox/Content/Center"]
layout_mode = 2
text = "Party (4):"

[node name="PartyList" type="ItemList" parent="UI/VBox/Content/Center"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyLabel" type="Label" parent="UI/VBox/Content/Center"]
layout_mode = 2
text = "Enemies (1-4):"

[node name="EnemyList" type="ItemList" parent="UI/VBox/Content/Center"]
layout_mode = 2
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="UI/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LogLabel" type="Label" parent="UI/VBox/Content/Right"]
layout_mode = 2
text = "Log:"

[node name="Log" type="Label" parent="UI/VBox/Content/Right"]
layout_mode = 2
size_flags_vertical = 3
text = "(battle log)"
autowrap_mode = 2

[node name="ActionsPanel" type="PanelContainer" parent="UI/VBox/Content/Right"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Content/Right/ActionsPanel"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="UI/VBox/Content/Right/ActionsPanel/VBox"]
layout_mode = 2
text = "Your turn — select enemy then:"

[node name="AttackBtn" type="Button" parent="UI/VBox/Content/Right/ActionsPanel/VBox"]
layout_mode = 2
text = "Attack"

[node name="EndTurnBtn" type="Button" parent="UI/VBox/Content/Right/ActionsPanel/VBox"]
layout_mode = 2
text = "End Turn"

[node name="HSep2" type="HSeparator" parent="UI/VBox"]
layout_mode = 2

[node name="Footer" type="Label" parent="UI/VBox"]
layout_mode = 2
text = "Speed determines who goes first each round. Higher speed = earlier turn."
